--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- Подключение jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Подключение стилей Ekko Lightbox -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
+    />
     <title>Gorban Transportation</title>
   </head>
   <body>
@@ -289,51 +296,76 @@
     </div>
 
     <!-- gallery starts -->
-    <div class="gallery-container container">
-      <div class="gallery-item" data-index="1">
-        <img
-          src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb"
-        />
+    <div class="">
+      <div class="row">
+        <a
+          href="https://unsplash.it/1200/768.jpg?image=251"
+          data-toggle="lightbox"
+          data-gallery="gallery"
+          class="col-md-4"
+        >
+          <img
+            src="https://unsplash.it/600.jpg?image=251"
+            class="img-fluid rounded"
+          />
+        </a>
+        <a
+          href="https://unsplash.it/1200/768.jpg?image=252"
+          data-toggle="lightbox"
+          data-gallery="gallery"
+          class="col-md-4"
+        >
+          <img
+            src="https://unsplash.it/600.jpg?image=252"
+            class="img-fluid rounded"
+          />
+        </a>
+        <a
+          href="https://unsplash.it/1200/768.jpg?image=253"
+          data-toggle="lightbox"
+          data-gallery="gallery"
+          class="col-md-4"
+        >
+          <img
+            src="https://unsplash.it/600.jpg?image=253"
+            class="img-fluid rounded"
+          />
+        </a>
       </div>
-      <div class="gallery-item" data-index="2">
-        <img
-          src="https://images.pexels.com/photos/5969/wood-nature-forest-bridge.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb"
-        />
-      </div>
-      <div class="gallery-item" data-index="3">
-        <img
-          src="https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb"
-        />
-      </div>
-      <div class="gallery-item" data-index="4">
-        <img
-          src="https://images.pexels.com/photos/373920/pexels-photo-373920.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
-        />
-      </div>
-      <div class="gallery-item" data-index="5">
-        <img
-          src="https://images.pexels.com/photos/164241/pexels-photo-164241.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
-        />
-      </div>
-      <div class="gallery-item" data-index="6">
-        <img
-          src="https://images.pexels.com/photos/417054/pexels-photo-417054.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-        />
-      </div>
-      <div class="gallery-item" data-index="7">
-        <img
-          src="https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-        />
-      </div>
-      <div class="gallery-item" data-index="8">
-        <img
-          src="https://images.pexels.com/photos/38326/pexels-photo-38326.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-        />
-      </div>
-      <div class="gallery-item" data-index="9">
-        <img
-          src="https://images.pexels.com/photos/266691/pexels-photo-266691.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-        />
+      <div class="row">
+        <a
+          href="https://unsplash.it/1200/768.jpg?image=254"
+          data-toggle="lightbox"
+          data-gallery="gallery"
+          class="col-md-4"
+        >
+          <img
+            src="https://unsplash.it/600.jpg?image=254"
+            class="img-fluid rounded"
+          />
+        </a>
+        <a
+          href="https://unsplash.it/1200/768.jpg?image=255"
+          data-toggle="lightbox"
+          data-gallery="gallery"
+          class="col-md-4"
+        >
+          <img
+            src="https://unsplash.it/600.jpg?image=255"
+            class="img-fluid rounded"
+          />
+        </a>
+        <a
+          href="https://unsplash.it/1200/768.jpg?image=256"
+          data-toggle="lightbox"
+          data-gallery="gallery"
+          class="col-md-4"
+        >
+          <img
+            src="https://unsplash.it/600.jpg?image=256"
+            class="img-fluid rounded"
+          />
+        </a>
       </div>
     </div>
     <!-- gallery ends -->
@@ -342,9 +374,9 @@
     <footer></footer>
     <!-- footer ends -->
 
-    <!-- Bootstrap JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <!-- Подключение скриптов Ekko Lightbox -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script src="./src/app.js"></script>
