--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <body>
     <!-- header starts -->
-    <header class="header">
+    <header class="header main-wrapper">
       <div class="header__left">
         <img class="header__logo" src="/logo.png" alt="Logo image" />
         <div class="header__text">
@@ -72,6 +72,67 @@
     </header>
     <!-- header ends -->
 
+    <!-- hero starts -->
+
+    <section class="hero main-wrapper">
+      <div class="hero__text">
+        <!-- <h1 class="hero__text1">
+          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
+        </h1> -->
+        <!-- <h1 class="hero__text1">
+          Transporting Exotic <br />
+          and Luxury Vehicles
+        </h1> -->
+        <h1 class="hero__text1">
+          Gorban <br />
+          Transportation Inc.
+        </h1>
+
+        <p class="hero__text2">
+          Transporting Exotic and Luxury Vehicles <br />
+          With Unmatched Dedication to Continuous <br />
+          Improvement and Customer Satisfaction.
+        </p>
+        <div class="hero__btns">
+          <a class="hero__btn1 btn" href="#" id="copyEmail">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="hero__icon"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+              />
+            </svg>
+            <div>gortrans@live.com</div>
+          </a>
+          <a class="hero__btn2 btn" href="#" id="copyPhone">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="hero__icon"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z"
+              />
+            </svg>
+            <div>+(314)-504-7886</div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- hero ends -->
+
     <!-- slider starts -->
     <div class="slider__container">
       <div
@@ -80,7 +141,12 @@
       >
         <div class="slider__list">
           <div class="slider__item" style="--position: 1">
-            <img src="/public/imgs/img4.jpg" alt="" />
+            <a
+              href="/public/imgs/img4.jpg"
+              data-toggle="lightbox"
+              data-gallery="gallery"
+              ><img src="/public/imgs/img4.jpg" alt=""
+            /></a>
           </div>
           <div class="slider__item" style="--position: 2">
             <img src="/public/imgs/img5.jpg" alt="" />
@@ -111,6 +177,7 @@
           </div>
         </div>
       </div>
+
       <div
         class="slider"
         reverse="true"
@@ -149,56 +216,73 @@
           </div>
         </div>
       </div>
+
+      <div
+        class="slider"
+        style="--width: 250px; --height: 185px; --quantity: 10"
+      >
+        <div class="slider__list">
+          <div class="slider__item" style="--position: 1">
+            <img src="/public/imgs/img4.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 2">
+            <img src="/public/imgs/img5.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 3">
+            <img src="/public/imgs/img6.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 4">
+            <img src="/public/imgs/img7.JPG" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 5">
+            <img src="/public/imgs/img8.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 6">
+            <img src="/public/imgs/img9.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 7">
+            <img src="/public/imgs/img10.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 8">
+            <img src="/public/imgs/img1.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 9">
+            <img src="/public/imgs/img2.jpg" alt="" />
+          </div>
+          <div class="slider__item" style="--position: 10">
+            <img src="/public/imgs/img11.jpg" alt="" />
+          </div>
+        </div>
+      </div>
     </div>
     <!-- slider ends -->
-
-    <!-- hero starts -->
-    <section class="hero main-wrapper">
-      <div class="hero__text">
-        <!-- <h1 class="hero__text1">
-          Transporting <span>Exclusive</span> and <span>Luxury</span> Vehicles
-        </h1> -->
-        <h1 class="hero__text1">Transporting Exotic and Luxury Vehicles</h1>
-
-        <p class="hero__text2">
-          With
-          <span>Unmatched Dedication</span> to Continuous Improvement and
-          <span>Customer Satisfaction.</span>
-        </p>
-      </div>
-      <a class="hero__btn1 btn" href="#about">Explore More</a>
-      <a class="hero__btn2 btn" href="contact">Contact Us</a>
-    </section>
-    <!-- hero ends -->
 
     <!-- about starts -->
     <a name="about"></a>
     <h3 class="section__title main-wrapper">About</h3>
-    <!-- <div class="hero__logo">
-      <img src="/public/logo.png" alt="" />
-    </div> -->
-    <section class="about">
+
+    <section class="about main-wrapper">
       <div class="about__card">
         <img class="about__img" src="/public/imgs/img12.jpg" alt="" />
         <div class="about__info">
           <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
+              fill="none"
               viewBox="0 0 24 24"
-              fill="currentColor"
+              stroke-width="1.5"
+              stroke="currentColor"
             >
               <path
-                d="M3.375 4.5C2.339 4.5 1.5 5.34 1.5 6.375V13.5h12V6.375c0-1.036-.84-1.875-1.875-1.875h-8.25ZM13.5 15h-12v2.625c0 1.035.84 1.875 1.875 1.875h.375a3 3 0 1 1 6 0h3a.75.75 0 0 0 .75-.75V15Z"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
               />
-              <path
-                d="M8.25 19.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0ZM15.75 6.75a.75.75 0 0 0-.75.75v11.25c0 .087.015.17.042.248a3 3 0 0 1 5.958.464c.853-.175 1.522-.935 1.464-1.883a18.659 18.659 0 0 0-3.732-10.104 1.837 1.837 0 0 0-1.47-.725H15.75Z"
-              />
-              <path d="M19.5 19.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z" />
             </svg>
           </div>
           <h2 class="about__text1">
             Large fleet <br />
-            of carriers.
+            of auto carriers
           </h2>
           <p class="about__text2">
             We have a large fleet of enclosed and open auto carriers.
@@ -212,22 +296,21 @@
           <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
+              fill="none"
               viewBox="0 0 24 24"
-              fill="currentColor"
+              stroke-width="1.5"
+              stroke="currentColor"
             >
               <path
-                fill-rule="evenodd"
-                d="M9.315 7.584C12.195 3.883 16.695 1.5 21.75 1.5a.75.75 0 0 1 .75.75c0 5.056-2.383 9.555-6.084 12.436A6.75 6.75 0 0 1 9.75 22.5a.75.75 0 0 1-.75-.75v-4.131A15.838 15.838 0 0 1 6.382 15H2.25a.75.75 0 0 1-.75-.75 6.75 6.75 0 0 1 7.815-6.666ZM15 6.75a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5Z"
-                clip-rule="evenodd"
-              />
-              <path
-                d="M5.26 17.242a.75.75 0 1 0-.897-1.203 5.243 5.243 0 0 0-2.05 5.022.75.75 0 0 0 .625.627 5.243 5.243 0 0 0 5.022-2.051.75.75 0 1 0-1.202-.897 3.744 3.744 0 0 1-3.008 1.51c0-1.23.592-2.323 1.51-3.008Z"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
               />
             </svg>
           </div>
           <h2 class="about__text1">
             Quick and <br />
-            Reliable.
+            Reliable
           </h2>
           <p class="about__text2">
             We provide quick and reliable vehicle transportation across the U.S.
@@ -242,22 +325,21 @@
           <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
+              fill="none"
               viewBox="0 0 24 24"
-              fill="currentColor"
+              stroke-width="1.5"
+              stroke="currentColor"
             >
               <path
-                d="M17.004 10.407c.138.435-.216.842-.672.842h-3.465a.75.75 0 0 1-.65-.375l-1.732-3c-.229-.396-.053-.907.393-1.004a5.252 5.252 0 0 1 6.126 3.537ZM8.12 8.464c.307-.338.838-.235 1.066.16l1.732 3a.75.75 0 0 1 0 .75l-1.732 3c-.229.397-.76.5-1.067.161A5.23 5.23 0 0 1 6.75 12a5.23 5.23 0 0 1 1.37-3.536ZM10.878 17.13c-.447-.098-.623-.608-.394-1.004l1.733-3.002a.75.75 0 0 1 .65-.375h3.465c.457 0 .81.407.672.842a5.252 5.252 0 0 1-6.126 3.539Z"
-              />
-              <path
-                fill-rule="evenodd"
-                d="M21 12.75a.75.75 0 1 0 0-1.5h-.783a8.22 8.22 0 0 0-.237-1.357l.734-.267a.75.75 0 1 0-.513-1.41l-.735.268a8.24 8.24 0 0 0-.689-1.192l.6-.503a.75.75 0 1 0-.964-1.149l-.6.504a8.3 8.3 0 0 0-1.054-.885l.391-.678a.75.75 0 1 0-1.299-.75l-.39.676a8.188 8.188 0 0 0-1.295-.47l.136-.77a.75.75 0 0 0-1.477-.26l-.136.77a8.36 8.36 0 0 0-1.377 0l-.136-.77a.75.75 0 1 0-1.477.26l.136.77c-.448.121-.88.28-1.294.47l-.39-.676a.75.75 0 0 0-1.3.75l.392.678a8.29 8.29 0 0 0-1.054.885l-.6-.504a.75.75 0 1 0-.965 1.149l.6.503a8.243 8.243 0 0 0-.689 1.192L3.8 8.216a.75.75 0 1 0-.513 1.41l.735.267a8.222 8.222 0 0 0-.238 1.356h-.783a.75.75 0 0 0 0 1.5h.783c.042.464.122.917.238 1.356l-.735.268a.75.75 0 0 0 .513 1.41l.735-.268c.197.417.428.816.69 1.191l-.6.504a.75.75 0 0 0 .963 1.15l.601-.505c.326.323.679.62 1.054.885l-.392.68a.75.75 0 0 0 1.3.75l.39-.679c.414.192.847.35 1.294.471l-.136.77a.75.75 0 0 0 1.477.261l.137-.772a8.332 8.332 0 0 0 1.376 0l.136.772a.75.75 0 1 0 1.477-.26l-.136-.771a8.19 8.19 0 0 0 1.294-.47l.391.677a.75.75 0 0 0 1.3-.75l-.393-.679a8.29 8.29 0 0 0 1.054-.885l.601.504a.75.75 0 0 0 .964-1.15l-.6-.503c.261-.375.492-.774.69-1.191l.735.267a.75.75 0 1 0 .512-1.41l-.734-.267c.115-.439.195-.892.237-1.356h.784Zm-2.657-3.06a6.744 6.744 0 0 0-1.19-2.053 6.784 6.784 0 0 0-1.82-1.51A6.705 6.705 0 0 0 12 5.25a6.8 6.8 0 0 0-1.225.11 6.7 6.7 0 0 0-2.15.793 6.784 6.784 0 0 0-2.952 3.489.76.76 0 0 1-.036.098A6.74 6.74 0 0 0 5.251 12a6.74 6.74 0 0 0 3.366 5.842l.009.005a6.704 6.704 0 0 0 2.18.798l.022.003a6.792 6.792 0 0 0 2.368-.004 6.704 6.704 0 0 0 2.205-.811 6.785 6.785 0 0 0 1.762-1.484l.009-.01.009-.01a6.743 6.743 0 0 0 1.18-2.066c.253-.707.39-1.469.39-2.263a6.74 6.74 0 0 0-.408-2.309Z"
-                clip-rule="evenodd"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
               />
             </svg>
           </div>
           <h2 class="about__text1">
             Engineered <br />
-            Focused.
+            Focused
           </h2>
           <p class="about__text2">
             We have a unique focus on transporting engineering and prototype
@@ -272,20 +354,21 @@
           <div class="about__icon icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
+              fill="none"
               viewBox="0 0 24 24"
-              fill="currentColor"
-              class="size-6"
+              stroke-width="1.5"
+              stroke="currentColor"
             >
               <path
-                fill-rule="evenodd"
-                d="M12.516 2.17a.75.75 0 0 0-1.032 0 11.209 11.209 0 0 1-7.877 3.08.75.75 0 0 0-.722.515A12.74 12.74 0 0 0 2.25 9.75c0 5.942 4.064 10.933 9.563 12.348a.749.749 0 0 0 .374 0c5.499-1.415 9.563-6.406 9.563-12.348 0-1.39-.223-2.73-.635-3.985a.75.75 0 0 0-.722-.516l-.143.001c-2.996 0-5.717-1.17-7.734-3.08Zm3.094 8.016a.75.75 0 1 0-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 0 0-1.06 1.06l2.25 2.25a.75.75 0 0 0 1.14-.094l3.75-5.25Z"
-                clip-rule="evenodd"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z"
               />
             </svg>
           </div>
           <h2 class="about__text1">
             Safe and <br />
-            Efficient.
+            Efficient
           </h2>
           <p class="about__text2">
             We have extensive experience in moving autonomous vehicles, ensuring
@@ -302,6 +385,7 @@
     </div>
 
     <!-- gallery starts -->
+    <a name="gallery"></a>
     <div class="gallery main-wrapper">
       <a
         href="https://unsplash.it/1200/768.jpg?image=251"
@@ -366,6 +450,47 @@
       </a>
     </div>
     <!-- gallery ends -->
+
+    <!-- contact starts -->
+    <!-- <div class="form">
+      <h3>Get in touch</h3>
+      <div class="form-group">
+        <input
+          type="text"
+          class="form-control"
+          value=""
+          placeholder="Name"
+          id="contact-name"
+        />
+        <label class="input-field-icon icon-user" for="login-name"></label>
+      </div>
+
+      <div class="form-group">
+        <input
+          type="email"
+          class="form-control"
+          value=""
+          placeholder="Email"
+          id="contact-email"
+        />
+        <label class="input-field-icon icon-email" for="login-email"></label>
+      </div>
+
+      <div class="form-group">
+        <textarea
+          class="form-control"
+          value=""
+          placeholder="Message"
+          id="contact-message"
+          rows="1"
+        ></textarea>
+      </div>
+
+      <button id="contact-send" class="btn btn-primary btn-lg btn-block">
+        Send
+      </button>
+    </div> -->
+    <!-- contact ends -->
 
     <!-- footer starts -->
     <footer></footer>
