--- a/index.html
+++ b/index.html
@@ -209,11 +209,12 @@
             </a>
           </div>
         </div>
-        <!-- <div class="hero__logo">
-          <img class="header__logo" src="/logo.png" alt="Logo image" />
-        </div> -->
       </section>
       <!-- hero ends -->
+    </div>
+
+    <div class="hero__logo">
+      <img class="header__logo" src="/logo.png" alt="Logo image" />
     </div>
 
     <!-- about starts -->
