--- a/index.html
+++ b/index.html
@@ -491,6 +491,22 @@
       });
     </script>
 
+    <script>
+      let lastScrollY = window.scrollY;
+
+      window.addEventListener("scroll", () => {
+        const header = document.querySelector(".header");
+        if (window.scrollY > lastScrollY && window.scrollY > 50) {
+          // Скрываем хедер при прокрутке вниз, если прокрутили больше 50px
+          header.classList.add("hidden");
+        } else {
+          // Показываем хедер при прокрутке вверх
+          header.classList.remove("hidden");
+        }
+        lastScrollY = window.scrollY;
+      });
+    </script>
+
     <script src="./src/app.js"></script>
     <script type="module" src="./src/main.js"></script>
   </body>
